# wingather

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  wingather.py
.github/: pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: main.yml  release.yml
docs/: hidden-windows.md  parameters.md  platform-support.md
scripts/: install-hooks.sh  update-version.sh
scripts/hooks/: pre-commit-basic  pre-push
tests/: test_cli.py  test_concern_scoring.py  test_core.py  test_rendering.py  test_trust.py
tests/one-offs/: check_sig_wmplayer.ps1
wingather/: __init__.py  __main__.py  _version.py  cli.py  core.py  default_trust.json  lolbins.json
